# pde-library

./: .gitignore  CLAUDE.md  README.md  activate.sh  environment.yml  pde_cli.py  pyproject.toml  requirements.txt
benchmarks/: __init__.py
benchmarks/advection/_2d/: analytical.py  dolfinx.py  warp_solver.py
benchmarks/advection/_2d/inflow_outflow/: description.txt
benchmarks/convection_diffusion/_2d/: analytical_solver.py  dolfinx.py  warp.py
benchmarks/convection_diffusion/_2d/neumann/: description.txt
benchmarks/diffusion/_2d/: analytical.py  dolfinx.py  warp.py
benchmarks/diffusion/_2d/dirichlet/: description.txt
benchmarks/heat/_2d/: analytical.py  warp.py
benchmarks/helmholtz/_2d/: analytical.py  dolfinx_solver.py  warp.py
benchmarks/helmholtz/_2d/mixed/: description.txt  warp_solver.py
benchmarks/laplace/_2d/: analytical.py  main.py  solver.py  warp.py
benchmarks/laplace/_2d/dirichlet/: description.txt  dolfinx_solver.py
benchmarks/laplace/_2d/mixed/: analytical_solver.py  (+3 more)
benchmarks/poisson/: analytical.py  poisson_2d.py  solver.py
benchmarks/poisson/_2d/: analytical.py  dolfinx.py  main.py  warp_solver.py
scripts/: generate_web_manifest.py
src/: __init__.py  analyze_convergence.py  convergence.py  metrics.py  results.py  timer.py  utils.py  visualization.py
web/: index.html  package-lock.json  package.json  style.css  vite.config.js
web/public/: manifest.json
web/src/: main.js
web/src/data/: loader.js  npz-loader.js
web/src/solvers/: laplace.js
web/src/visualization/: plotly-heatmap.js  vtk-heatmap.js  vtk-volume.js
(+44 files in other folders)
