[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pde-library"
version = "0.1.0"
description = "Benchmarking framework for comparing PDE solvers against analytical solutions"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "warp-lang",
]

[project.scripts]
pde = "pde_cli:main"

[tool.setuptools]
py-modules = ["pde_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "benchmarks*"]
